--- a/css/black.css
+++ b/css/black.css
@@ -92,6 +92,15 @@ h1 a:active, h1 a:hover, h1 a:link, h1 a:visited { color: #e6e6e6; }
 
 .p-channel_sidebar__jumper { background: transparent !important; }
 
+.p-threads_flexpane__header_channel_name {
+  color: rgba(230, 230, 230, 0.8) !important;
+}
+
+.p-threads_footer__input .p-message_input_plus,
+.p-threads_footer__input .p-message_input_field {
+  background-color: rgba(0, 0, 0, 0.25);
+}
+
 .channels_list_holder h2 { color: #e6e6e6 !important; }
 
 .channels_list_holder h2.hoverable:not(.jquery_hover):hover { color: #e6e6e6; opacity: 0.8; }
@@ -1389,7 +1398,11 @@ ts-message .reply_bar:hover { background: #222; border-color: #000; }
 
 .p-message_pane .c-message_list.c-virtual_list--scrollbar > .c-scrollbar__hider::before { background: #222; border-bottom: 1px solid #222; }
 
+
+
 .p-message_pane .p-message_pane__top_banners:not(:empty) + div .c-message_list:not(.c-virtual_list--scrollbar):before, .p-message_pane .p-message_pane__top_banners:not(:empty) + div .c-message_list.c-virtual_list--scrollbar > .c-scrollbar__hider:before { box-shadow: 0 32px #222; }
+
+
 
 .p-message_pane__foreword__description, .p-message_pane__limited_history_alert { color: #e6e6e6; }
 
