--- a/css/black.css
+++ b/css/black.css
@@ -4193,3 +4193,19 @@ comments { box-shadow: inset 1px 0 0 rgba(0, 0, 0, 0.25); }
 .para_menu a.trigger.pilcrow { filter: grayscale(2) brightness(1.8); }
 
 .para_menu a.trigger.pilcrow:hover, .para_menu a.trigger.pilcrow.active { filter: grayscale(2) brightness(2); }
+
+/* Thread view fixes */
+#client-ui .p-threads_view { background: #222; color: #e6e6e6; }
+
+.p-threads_view_header__channel_name { color: #e6e6e6; }
+
+.c-pillow_file_container {
+  border: 1px solid #e6e6e6;
+}
+
+.p-threads_view__default_background,
+.p_threads_view_load_newer_button, 
+.p_threads_view_load_older_button,
+.c-pillow_file_container { 
+  background: #222; 
+}
