Fix for v4 and add linux support

--- a/slack-darkmode.css
+++ b/slack-darkmode.css
@@ -1,3 +1,7 @@
+/************************************/
+/** BEGIN INJECTED SLACK DARK MODE **/
+/************************************/
+
 body { background: #222; color: #e6e6e6; }
 
 a { color: #949494; }
@@ -4196,15 +4200,15 @@ comments { box-shadow: inset 1px 0 0 rgba(0, 0, 0, 0.25); }
 
 /* Thread view fixes */
 #client-ui .p-threads_view,
-.p-threads_view__divider_label { 
-  background: #222; 
-  color: #e6e6e6; 
+.p-threads_view__divider_label {
+  background: #222;
+  color: #e6e6e6;
 }
 
 .p-threads_view_header__channel_name,
 .c-message_kit__file__meta__text,
-.c-button-unstyled { 
-  color: #e6e6e6; 
+.c-button-unstyled {
+  color: #e6e6e6;
 }
 
 .c-pillow_file_container {
@@ -4216,10 +4220,15 @@ comments { box-shadow: inset 1px 0 0 rgba(0, 0, 0, 0.25); }
 }
 
 .p-threads_view__default_background,
-.p_threads_view_load_newer_button, 
+.p_threads_view_load_newer_button,
 .p_threads_view_load_older_button,
 .c-pillow_file_container,
 .p-threads_footer__input--legacy .p-message_input_file_button,
-.c-button--disabled { 
-  background: #222; 
+.c-button--disabled {
+  background: #222;
 }
+
+
+/**********************************/
+/** END INJECTED SLACK DARK MODE **/
+/**********************************/
